[1.0.3] Correções para que o teste unitário funcione mesmo sem o docker do postgresql ter sido iniciado manualmente primeiro. Preparando para criação de testes integrados.